Prevent overflow of author names on posts

--- a/app/assets/stylesheets/post_and_comment.scss
+++ b/app/assets/stylesheets/post_and_comment.scss
@@ -36,6 +36,7 @@ div.post-wrapper {
       border-radius: 5px;
       border-top-left-radius: 0px;
       border-bottom-left-radius: 0px;
+      max-width: calc(100% - 70px);
     }
 
     div.content {
